RESOLVED FIXED266267
[IFC][Ruby] Fix fast/ruby/bopomofo-letter-spacing.html
https://bugs.webkit.org/show_bug.cgi?id=266267
Summary [IFC][Ruby] Fix fast/ruby/bopomofo-letter-spacing.html
alan
Reported 2023-12-11 19:07:34 PST
ssia
Attachments
[fast-cq]Patch (2.32 KB, patch)
2023-12-11 20:40 PST, alan
no flags
alan
Comment 1 2023-12-11 20:40:09 PST
Created attachment 468992 [details] [fast-cq]Patch
EWS
Comment 2 2023-12-12 06:35:56 PST
Committed 271928@main (891b10819ea6): <https://commits.webkit.org/271928@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468992 [details].
Radar WebKit Bug Importer
Comment 3 2023-12-12 06:36:15 PST
Note You need to log in before you can comment on or make changes to this bug.