[IFC][Ruby] Fix fast/ruby/bopomofo-letter-spacing.html https://bugs.webkit.org/show_bug.cgi?id=266267

Reviewed by Antti Koivisto.

Inline box margin box includes letter spacing and as a result intercharacter annotation boxes
are placed as if letter-spacing applied to them.

* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::RubyFormattingContext::placeAnnotationBox):

Canonical link: https://commits.webkit.org/271928@main